faet/scholarship 검색 필터링 추가(query param)
