# src/routes/search.routes.js
@@ -1,10 +1,16 @@
 import express from "express";
-import { search, getAllDocs } from "../controllers/search.controller.js";
+import {
+  search,
+  getAllDocs,
+  getAllDocs2,
+} from "../controllers/search.controller.js";
 
 const router = express.Router();
 
 router.get("/search", search);
 
 router.get("/indices/scholarship", getAllDocs);
+
+router.get("/indices/scholarship2", getAllDocs2);
 
 export default router;
