# src/swagger/openapi.yaml
@@ -58,3 +58,54 @@ paths:
       responses:
         "200":
           description: Elasticsearch search 응답 원문
+
+  /indices/scholarship2:
+    get:
+      summary: scholarship 인덱스 문서 조회 - 파라미터 추가
+      description: scholarship 인덱스에서 match_all 또는 term 필터(stdno/year/smt/inpart)를 적용해 조회한 결과를 반환합니다.
+      parameters:
+        - in: query
+          name: size
+          required: false
+          schema:
+            type: integer
+            default: 1000
+            minimum: 1
+            maximum: 10000
+          description: 가져올 문서 개수 (최대 10000)
+
+        - in: query
+          name: stdno
+          required: false
+          schema:
+            type: string
+          description: 학번(STDNO) exact match
+          example: "202010766"
+
+        - in: query
+          name: year
+          required: false
+          schema:
+            type: integer
+          description: 학년도(SCH_YEAR) exact match
+          example: 2024
+
+        - in: query
+          name: smt
+          required: false
+          schema:
+            type: string
+          description: 학기코드(SMT_RCD) exact match
+          example: "1"
+
+        - in: query
+          name: inpart
+          required: false
+          schema:
+            type: string
+          description: 소득분위(INPART) exact match
+          example: "8"
+
+      responses:
+        "200":
+          description: Elasticsearch search 응답 원문
